[package]
name = "oxisql"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
console = "0.15.7"
futures = "0.3.28"
rpassword = "7.2.0"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json"]}
tokio = { version = "1.28.2", features = ["full"] }
